fixed typo; thanks FRAP

--- a/po/ar.po
+++ b/po/ar.po
@@ -5269,7 +5269,7 @@ msgstr "الصانع"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #, fuzzy
