--- a/po/bg.po
+++ b/po/bg.po
@@ -4980,7 +4980,7 @@ msgstr "Производител"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
