--- a/po/cs.po
+++ b/po/cs.po
@@ -5658,7 +5658,7 @@ msgstr "Výrobce"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 "Probíhá tovární nastavení\n"
 "Počkejte, až se enigma2 restartuje"
