--- a/po/el.po
+++ b/po/el.po
@@ -4927,7 +4927,7 @@ msgstr "Κατασκευαστής"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 "Η επαναφορά των εργοστασιακών ρυθμίσεων βρίσκεται σε εξέλιξη\n"
 "Περιμένετε μέχρι την επανεκκίνηση του δέκτη σας"
