--- a/po/fi.po
+++ b/po/fi.po
@@ -5472,7 +5472,7 @@ msgstr "Valmistaja"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #
