--- a/po/id.po
+++ b/po/id.po
@@ -5051,7 +5051,7 @@ msgstr "Pabrikan"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
