--- a/po/is.po
+++ b/po/is.po
@@ -5493,7 +5493,7 @@ msgstr "Framleiðandi"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #
