--- a/po/pt.po
+++ b/po/pt.po
@@ -5690,7 +5690,7 @@ msgstr "Fabricante"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #
