--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4973,7 +4973,7 @@ msgstr "Fabricante"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
