--- a/po/ro.po
+++ b/po/ro.po
@@ -5071,7 +5071,7 @@ msgstr "Fabricant"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #, fuzzy
