--- a/po/ru.po
+++ b/po/ru.po
@@ -4954,7 +4954,7 @@ msgstr "Производитель"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
