--- a/po/sl.po
+++ b/po/sl.po
@@ -5707,7 +5707,7 @@ msgstr "Proizvajalec"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #
