--- a/po/th.po
+++ b/po/th.po
@@ -5096,7 +5096,7 @@ msgstr "ผู้ผลิต"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #, fuzzy
