--- a/po/tr.po
+++ b/po/tr.po
@@ -5003,7 +5003,7 @@ msgstr "Üretici"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
