--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -4937,7 +4937,7 @@ msgstr "製造商"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
