--- a/po/ca.po
+++ b/po/ca.po
@@ -5561,7 +5561,7 @@ msgstr ""
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #
