--- a/po/da.po
+++ b/po/da.po
@@ -5614,7 +5614,7 @@ msgstr "Fabrikant"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #
