--- a/po/de.po
+++ b/po/de.po
@@ -4945,7 +4945,7 @@ msgstr "Hersteller"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
