--- a/po/en.po
+++ b/po/en.po
@@ -4976,7 +4976,7 @@ msgstr "Manufacturer"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
