--- a/po/et.po
+++ b/po/et.po
@@ -4953,7 +4953,7 @@ msgstr "Tootja"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
