--- a/po/fa.po
+++ b/po/fa.po
@@ -5064,7 +5064,7 @@ msgstr "تولید کننده"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
