--- a/po/fr.po
+++ b/po/fr.po
@@ -4929,7 +4929,7 @@ msgstr "Constructeur"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 "Réinitialisation des valeurs par défaut en cours\n"
 "Attendre jusqu'à ce que enigma2 redémarre"
