--- a/po/he.po
+++ b/po/he.po
@@ -5331,7 +5331,7 @@ msgstr "יצרן"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #, fuzzy
