--- a/po/hr.po
+++ b/po/hr.po
@@ -4945,7 +4945,7 @@ msgstr "Proizvođač"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 "Resetiranje proizvođača u tijeku\n"
 "Pričekajte dok se enigma2 ne restarta"
