--- a/po/it.po
+++ b/po/it.po
@@ -4934,7 +4934,7 @@ msgstr "Produttore"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
