--- a/po/lv.po
+++ b/po/lv.po
@@ -4960,7 +4960,7 @@ msgstr "Ražotājs"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
