--- a/po/nb.po
+++ b/po/nb.po
@@ -5491,7 +5491,7 @@ msgstr "Produsent"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #
