--- a/po/nl.po
+++ b/po/nl.po
@@ -5139,7 +5139,7 @@ msgstr "Fabrikant"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
