--- a/po/nn.po
+++ b/po/nn.po
@@ -5443,7 +5443,7 @@ msgstr "Produsent"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #
