--- a/po/sk.po
+++ b/po/sk.po
@@ -4955,7 +4955,7 @@ msgstr "Výrobca"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
