--- a/po/sr.po
+++ b/po/sr.po
@@ -5739,7 +5739,7 @@ msgstr "Proizvođač"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #
