--- a/po/sv.po
+++ b/po/sv.po
@@ -5593,7 +5593,7 @@ msgstr "Tillverkare"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 #
