--- a/po/uk.po
+++ b/po/uk.po
@@ -5048,7 +5048,7 @@ msgstr "Виробник"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
