--- a/po/vi.po
+++ b/po/vi.po
@@ -4937,7 +4937,7 @@ msgstr "Nhà chế tạo"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
