--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4939,7 +4939,7 @@ msgstr "制造商"
 
 msgid ""
 "Manufacturer reset in progress\n"
-"Pease wait until enigma2 restarts"
+"Please wait until enigma2 restarts"
 msgstr ""
 
 msgid "Margin after recording (minutes)"
