--- a/po/bg.po
+++ b/po/bg.po
@@ -1174,7 +1174,7 @@ msgid "Audio PID%s, codec & lang"
 msgstr ""
 
 msgid "Audio PID, codec & lang"
-msgstr ""
+msgstr "Аудио PID, кодек и език"
 
 msgid "Audio auto volume level"
 msgstr "Автоматично ниво за силата на звука"
@@ -4982,6 +4982,8 @@ msgid ""
 "Manufacturer reset in progress\n"
 "Please wait until enigma2 restarts"
 msgstr ""
+"Връщане към заводски настройки...\n"
+"Моля изчакайте докато enigma2 се рестартира"
 
 msgid "Margin after recording (minutes)"
 msgstr "Обедини след записа (в минути)"
@@ -8792,7 +8794,7 @@ msgstr ""
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
 msgid "TRANSLATOR_INFO"
-msgstr "Мартин Петков - България - 01.05.2018"
+msgstr "Мартин Петков - България - 03.02.2020"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "TS файл е твърде голям за ISO9660 ниво 1!"
