fixed swapped strings; thanks FRAP

--- a/po/ru.po
+++ b/po/ru.po
@@ -575,8 +575,8 @@ msgstr "<Дефолт + пикон >"
 msgid "< Default >"
 msgstr "<Дефолт >"
 
-msgid "< Чрезвычайная ситуация >"
-msgstr "< Emergency >"
+msgid "< Emergency >"
+msgstr "< Чрезвычайная ситуация >"
 
 msgid "< Pending restart >"
 msgstr "< Ожидание рестарта >"
