--- a/po/cs.po
+++ b/po/cs.po
@@ -356,7 +356,7 @@ msgid ""
 msgstr ""
 "%s\n"
 "\n"
-"Stiskněte 'OK' pro multiboot nebo 'Exit' pro zavření"
+"Stiskněte 'OK' pro Multiboot nebo 'Exit' pro zavření"
 
 #, python-format
 msgid "%s %d.%d"
@@ -1082,10 +1082,10 @@ msgid "Allocate unused memory index"
 msgstr "Přidělit nepoužitou paměť"
 
 msgid "Allow 10bit"
-msgstr "umožnit 10bit"
+msgstr "Umožnit 10bit"
 
 msgid "Allow 12bit"
-msgstr "umožnit 12bit"
+msgstr "Umožnit 12bit"
 
 msgid "Allow quit movieplayer with exit"
 msgstr "Umožnit zavírat movieplayer pomocí Exit"
@@ -2531,10 +2531,10 @@ msgid "Configure which tuner for recordings will be preferred, when more than on
 msgstr "V případě, že je využitelný více než jeden tuner nastavuje preferovaný tuner pro nahrávání."
 
 msgid "Configure which tuner type will be preferred when the same service is available on different types of tuners. Choose 'no priority' to try each alternative one by one regardless of the tuner type."
-msgstr "Konfigurace, který typ tuneru bude mít přednost, je-li k dispozici stejná služba pro různé typy tunerů. Volba \"Žádná priorita\" zkusí každou alternativu jednu po druhé nezávisle na typu tuneru."
+msgstr "Konfigurace, který typ tuneru bude mít přednost, jestliže je k dispozici stejná služba pro různé typy tunerů. Volba 'Žádná priorita' zkusí každou alternativu jednu po druhé nezávisle na typu tuneru."
 
 msgid "Configure which tuner will be preferred, when more than one tuner is available. If set to 'auto' the system will give priority to the tuner having the lowest number of channels/satellites."
-msgstr "Nastavuje, který tuner bude preferovaný, jestliže je k dispozici více než jeden tuner. V případě nastavení na 'automaticky' bude preferován tuner s nejnižším počtem kanálů/satelitů."
+msgstr "Nastavuje, který tuner bude preferovaný, jestliže je k dispozici více než jeden tuner. V případě nastavení na 'Automaticky' bude preferován tuner s nejnižším počtem kanálů/satelitů."
 
 #
 msgid "Configure your internal LAN"
@@ -4745,7 +4745,7 @@ msgstr "Skrýt přehrávač"
 
 #
 msgid "Hide zap errors"
-msgstr "Skrýt chyby při přepínání"
+msgstr "Skrývat chyby při přepínání"
 
 msgid "Hierarchy info"
 msgstr "Informace o hierarchii"
@@ -5962,7 +5962,7 @@ msgstr "Volba přehledu při spuštění Multi-EPG"
 msgid "MultiType"
 msgstr "multityp"
 
-msgid "Multiboot"
+msgid "Multiboot image selector"
 msgstr "Multiboot"
 
 msgid "Multichannel PCM"
@@ -8714,7 +8714,7 @@ msgid "Selecting satellites 2 (USALS)"
 msgstr "Výběr satelitů 2 (USALS)"
 
 msgid "Selecting this option allows you to configure a group of satellites in one block."
-msgstr "Tato volba umožňuje konfigurovat skupinu satelitů v jednom bloku."
+msgstr "Umožňuje konfigurovat skupinu satelitů v jednom bloku."
 
 msgid "Selects the mode how live tv should be shown on the LCD."
 msgstr "Výběr režimu zobrazení TV na LCD."
@@ -9038,7 +9038,7 @@ msgid "Show bouquet selection menu"
 msgstr "Zobrazovat menu pro výběr přehledů"
 
 msgid "Show busy indicator when the system is busy."
-msgstr "Zobrazuje indikátor zaneprázdnění jestliže je systém zaměstnán."
+msgstr "Jestliže je systém zaneprázdněn, bude zobrazovat indikátor zaneprázdnění."
 
 #
 msgid "Show channel numbers in channel selection"
@@ -9344,9 +9344,8 @@ msgid "Skin & Resolution: %s (%sx%s)\n"
 msgstr "Skin & Rozlišení: %s (%sx%s)\n"
 
 #
-#, fuzzy
 msgid "Skin Selection Actions"
-msgstr "Zvolte akci"
+msgstr ""
 
 msgid "SkinSelector: Restart GUI"
 msgstr "Výběr skinu - restartovat rozhraní"
@@ -9514,7 +9513,7 @@ msgid "Sort list:"
 msgstr "Setřídit seznam"
 
 msgid "Sort order for menu entries"
-msgstr "Pořadí seřazení položek menu"
+msgstr "Řazení položek v menu"
 
 msgid "Sort order for setup entries"
 msgstr "Seřazení položek nastavení"
@@ -9701,7 +9700,7 @@ msgstr "Začíná"
 
 #
 msgid "Startup the set top box in standby"
-msgstr "Po startu přepne přijímač do pohotovostního režimu"
+msgstr "Po startu přepne přijímač do pohotovostního režimu."
 
 #
 msgid "Startup to Standby"
@@ -10055,7 +10054,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®1.2.2020"
+"®17.2.2020"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -10382,7 +10381,7 @@ msgid "This option allows you to add the softcam setup in the extensions menu."
 msgstr "Umožňuje přidat položku 'Nastavení softcamu' do menu rozšíření."
 
 msgid "This option allows you to alphabetically sort setup menu entries."
-msgstr "Tato volba umožňuje abecedně setřídit položky nastavení."
+msgstr "Umožňuje abecedně setřídit položky nastavení."
 
 msgid "This option allows you to boost the blue tones in the picture."
 msgstr "Umožňuje zesílit modré tóny v obrazu."
@@ -10421,25 +10420,25 @@ msgid "This option allows you to enable or disable the 12 bit color mode"
 msgstr "Tato možnost umožňuje zapnout nebo vypnout 12 bitový barevný režim"
 
 msgid "This option allows you to force the HDR10 modes for UHD"
-msgstr "Tato volba umožňuje pro UHD vynutit režimy HDR10"
+msgstr "Umožňuje pro UHD vynutit režimy HDR10"
 
 msgid "This option allows you to force the HLG modes for UHD"
-msgstr "Tato volba umožňuje pro UHD vynutit režimy HLG"
+msgstr "Umožňuje pro UHD vynutit režimy HLG"
 
 msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button. With the user defined hidden the blue button is not shown in the menus"
-msgstr "Umožňuje třídit nebo skrývat položky menu. Uživatelské nastavení umožnuje  pomocí modrého tlačítka měnit pořadí a skrývat položky. Uživatelské skryté nezobrazuje modré tlačítko."
+msgstr "Umožňuje třídit nebo skrývat položky menu. Uživatelské nastavení umožňuje  pomocí modrého tlačítka měnit pořadí a skrývat položky. 'Uživatelské skryté' nezobrazuje modré tlačítko."
 
 msgid "This option allows you to power off the display."
 msgstr "Toto nastavení umožňuje vypnout displej."
 
 msgid "This option allows you to show all symbols on the display."
-msgstr "Tato volba umožňuje zobrazovat všechny symboly na displeji."
+msgstr "Umožňuje zobrazovat všechny symboly na displeji."
 
 msgid "This option allows you to show menu and/or plugin number quick links."
 msgstr "Zobrazuje čísla rychlých odkazů pro menu a/nebo pluginy."
 
 msgid "This option allows you to show menu paths."
-msgstr "Tato volba umožňuje zobrazovat cestu v menu."
+msgstr "Umožňuje zobrazovat cestu v menu."
 
 msgid "This option allows you to view the old and new settings side by side."
 msgstr "Umožňuje zobrazit staré a nové nastavení vedle sebe."
@@ -11639,7 +11638,7 @@ msgid "What type of service scan do you want?"
 msgstr "Jaký typ vyhledání programů chcete?"
 
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
-msgstr "Enigma2 bude načítat odstraněné uživatelské přehledy. To znamená, že uživatelské přehledy, které jsou k dispozici, ale nejsou zahrnuty v bouquets.tv nebo bouquets.radio, budou načteny. To například umožňuje zachovat vlastní uživatelské přehledy, zatímco instalovaná nastavení jsou aktualizována."
+msgstr "Enigma bude načítat odstraněné uživatelské přehledy. To znamená, že uživatelské přehledy, které jsou k dispozici, ale nejsou zahrnuty v bouquets.tv nebo bouquets.radio, budou načteny. To například umožňuje zachovat vlastní uživatelské přehledy, zatímco instalovaná nastavení jsou aktualizována."
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
 msgstr "Jestliže je povoleno, pak PiP může být ukončen tlačítkem Exit."
@@ -11781,7 +11780,7 @@ msgid "When enabled, subtitles for the hearing impaired will be preferred over n
 msgstr "Jestliže budou dostupné oba typy, titulky pro sluchově postižené budou preferovány před normálními titulky."
 
 msgid "When enabled, teletext pages will be cached, allowing faster access."
-msgstr "Povolení vyrovnávací paměti pro teletext zajišťuje rychlejší přistup."
+msgstr "Povolení vyrovnávací paměti pro teletext zajišťuje rychlejší přistup ke stránkám."
 
 msgid "When enabled, teletext subtitles will be displayed at their original position."
 msgstr "Jestliže je povoleno, teletextové titulky budou zobrazovány na původní pozici."
@@ -12248,7 +12247,7 @@ msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr "Zgemma H.S/H.2S/H.2H/H5/H7(starý model)"
 
 msgid "Zgemma H7(new model)/H9(new model)/H9COMBO/H9TWIN/H10"
-msgstr ""
+msgstr "Zgemma H7(nový model)/H9(nový model)/H9COMBO/H9TWIN/H10"
 
 msgid "Zgemma H9(old model)/I55Plus"
 msgstr "Zgemma H9(starý model)/I55Plus"
@@ -12458,7 +12457,7 @@ msgstr "konfigurační menu"
 
 #
 msgid "configure in which resolution pictures are displayed with the picture viewer and movieplayer"
-msgstr "Nastavuje v jakém rozlišení bude zobrazovat obrázky prohlížeč obrázků a movieplayer"
+msgstr "Nastavuje v jakém rozlišení bude zobrazovat obrázky prohlížeč obrázků a movieplayer."
 
 #
 msgid "confirmed"
