Updated all .po files and Greek translation

--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-31 14:53+0200\n"
+"POT-Creation-Date: 2020-02-18 00:36+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -1570,12 +1570,12 @@ msgstr "Baskicky"
 msgid "Begin time"
 msgstr "Čas začátku"
 
-msgid "Behavior of 'pause and ok' when paused"
-msgstr "Chování 'pauza a ok' při pozastavení"
-
 #
 msgid "Behavior of '0' button in PiP mode"
 msgstr "Funkce tlačítka 0 v PiP módu"
+
+msgid "Behavior of 'pause and ok' when paused"
+msgstr "Chování 'pauza a ok' při pozastavení"
 
 #
 msgid "Behavior when a movie is started"
@@ -1652,6 +1652,11 @@ msgstr "Boot do Android image"
 
 msgid "Boot to Recovery menu"
 msgstr "Boot do Recovery menu"
+
+#
+#, fuzzy
+msgid "Bootup time"
+msgstr "Setřídit dle času"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosna a Hercegovina"
@@ -4088,6 +4093,10 @@ msgstr "Obarvení dialogů pro externí titulky"
 
 msgid "External subtitle switch fonts"
 msgstr "Přepínání fontu pro externí titulky"
+
+#, fuzzy
+msgid "Externally powered"
+msgstr "Externí uložiště %s"
 
 msgid "Extra end time to ignore inactivity sleeptimer"
 msgstr "Konec dalšího úseku ignorování časovače vypnutí"
@@ -8446,12 +8455,6 @@ msgstr "Zvolte možnost Rychlý DiSEqC pokud to Váš anténní systém podporuj
 msgid "Select HDD"
 msgstr "Zvolte HDD"
 
-msgid "Select Image"
-msgstr "Výběr image"
-
-msgid "Select Multiboot"
-msgstr "Vyberte Multiboot"
-
 msgid "Select Softcam"
 msgstr "Softcam"
 
@@ -8676,6 +8679,9 @@ msgstr "Vybere video vstup pomocí tlačítek nahoru/dolů"
 #
 msgid "Select video mode"
 msgstr "Zvolte video mód"
+
+msgid "Select whether your SCR device is externally powered."
+msgstr ""
 
 #
 msgid "Select wireless network"
