--- a/po/hu.po
+++ b/po/hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-31 14:53+0200\n"
+"POT-Creation-Date: 2020-02-18 00:36+0200\n"
 "PO-Revision-Date: 2019-12-02 21:50+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
@@ -1366,11 +1366,11 @@ msgstr "Baszk"
 msgid "Begin time"
 msgstr "Kezdési idő"
 
-msgid "Behavior of 'pause and ok' when paused"
-msgstr "'Pause' és 'OK' viselkedése megállítás közben"
-
 msgid "Behavior of '0' button in PiP mode"
 msgstr "Kép-a-Képben esetén a 0 gomb jelentése"
+
+msgid "Behavior of 'pause and ok' when paused"
+msgstr "'Pause' és 'OK' viselkedése megállítás közben"
 
 msgid "Behavior when a movie is started"
 msgstr "Amikor egy lejátszás elindul"
@@ -1440,6 +1440,10 @@ msgstr "Bootolás Androidba"
 
 msgid "Boot to Recovery menu"
 msgstr "Bootolás a visszaállítási menübe"
+
+#, fuzzy
+msgid "Bootup time"
+msgstr "Rendez: Idő"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosznia-Hercegovina"
@@ -3552,6 +3556,10 @@ msgstr "Külső feliratok párbeszéd-színe"
 msgid "External subtitle switch fonts"
 msgstr "Külső felirat betűtípus csere"
 
+#, fuzzy
+msgid "Externally powered"
+msgstr "Külső tároló %s"
+
 msgid "Extra end time to ignore inactivity sleeptimer"
 msgstr "Inaktivitás figyelmen kívül hagyásának záró ideje (extra időkeret)"
 
@@ -5203,8 +5211,9 @@ msgstr "Multi-EPG lista kiválasztás"
 msgid "MultiType"
 msgstr "Multi-típus"
 
-msgid "Multiboot"
-msgstr "Multiboot"
+#, fuzzy
+msgid "Multiboot image selector"
+msgstr "Több műhold (mind kiválasztva)"
 
 msgid "Multichannel PCM"
 msgstr "Többcsatornás PCM"
@@ -7313,12 +7322,6 @@ msgstr "Válassza a 'Gyors DiSEqC' módot, amennyiben a földfelszíni rendszere
 msgid "Select HDD"
 msgstr "Háttértár kiválasztása"
 
-msgid "Select Image"
-msgstr "Image kiválasztása"
-
-msgid "Select Multiboot"
-msgstr "Multiboot kiválasztása"
-
 msgid "Select Softcam"
 msgstr "Softcam kiválasztása"
 
@@ -7511,6 +7514,9 @@ msgstr "Válasszon videó bemenetet a FEL/LE gombokkal"
 
 msgid "Select video mode"
 msgstr "Válassza ki a video módot"
+
+msgid "Select whether your SCR device is externally powered."
+msgstr ""
 
 msgid "Select wireless network"
 msgstr "Válasszon vezeték nélküli hálózatot"
