--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-01 14:29+0100\n"
+"POT-Creation-Date: 2020-02-18 00:36+0200\n"
 "PO-Revision-Date: 2020-02-10 08:11+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -1372,11 +1372,11 @@ msgstr "Baskijski"
 msgid "Begin time"
 msgstr "Vrijeme početka"
 
-msgid "Behavior of 'pause and ok' when paused"
-msgstr "Ponašanje 'pauziraj i ok' tijekom pauze"
-
 msgid "Behavior of '0' button in PiP mode"
 msgstr "Ponašanje gumba 0 u PiP modu"
+
+msgid "Behavior of 'pause and ok' when paused"
+msgstr "Ponašanje 'pauziraj i ok' tijekom pauze"
 
 msgid "Behavior when a movie is started"
 msgstr "Ponašanje na početku videozapisa"
@@ -1446,6 +1446,10 @@ msgstr "Pokretanje Android slike"
 
 msgid "Boot to Recovery menu"
 msgstr "Pokretanje u Izbornik za oporavak"
+
+#, fuzzy
+msgid "Bootup time"
+msgstr "Sortiranje po vremenu"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosna i Hercegovina"
@@ -3563,6 +3567,10 @@ msgstr "Bojanje vanjskog dijaloga titlova"
 msgid "External subtitle switch fonts"
 msgstr "Promjena fonta za vanjske titlove"
 
+#, fuzzy
+msgid "Externally powered"
+msgstr "Vanjska pohrana %s"
+
 msgid "Extra end time to ignore inactivity sleeptimer"
 msgstr "Dodatno završno vrijeme za ignoriranje neaktivnog tajmera"
 
@@ -5209,8 +5217,9 @@ msgstr "Multi-EPG odabir paketa"
 msgid "MultiType"
 msgstr "Više vrsta"
 
-msgid "Multiboot"
-msgstr "Multiboot"
+#, fuzzy
+msgid "Multiboot image selector"
+msgstr "Više satelita (odaberite sve)"
 
 msgid "Multichannel PCM"
 msgstr "Višekanalni PCM"
@@ -7319,12 +7328,6 @@ msgstr "Odaberite brzi DiSEqC ako vaš anteni sustav to podržava. Ako niste sig
 msgid "Select HDD"
 msgstr "Odaberite HDD"
 
-msgid "Select Image"
-msgstr "Odaberite image"
-
-msgid "Select Multiboot"
-msgstr "Odaberite Multiboot"
-
 msgid "Select Softcam"
 msgstr "Odaberite SoftCam"
 
@@ -7517,6 +7520,9 @@ msgstr "Odaberite video ulaz pomoću tipki gore/dolje"
 
 msgid "Select video mode"
 msgstr "Odaberite video način rada"
+
+msgid "Select whether your SCR device is externally powered."
+msgstr ""
 
 msgid "Select wireless network"
 msgstr "Odaberite bežičnu mrežu"
