Updated Croatian translation (thanks zeljko2)

--- a/po/hr.po
+++ b/po/hr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-02-18 00:36+0200\n"
-"PO-Revision-Date: 2020-02-10 08:11+0100\n"
+"PO-Revision-Date: 2020-02-18 19:14+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
 "Language: hr_HR\n"
@@ -1447,9 +1447,8 @@ msgstr "Pokretanje Android slike"
 msgid "Boot to Recovery menu"
 msgstr "Pokretanje u Izbornik za oporavak"
 
-#, fuzzy
 msgid "Bootup time"
-msgstr "Sortiranje po vremenu"
+msgstr "Vrijeme pokretanja"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosna i Hercegovina"
@@ -3567,9 +3566,8 @@ msgstr "Bojanje vanjskog dijaloga titlova"
 msgid "External subtitle switch fonts"
 msgstr "Promjena fonta za vanjske titlove"
 
-#, fuzzy
 msgid "Externally powered"
-msgstr "Vanjska pohrana %s"
+msgstr "Vanjski pogon"
 
 msgid "Extra end time to ignore inactivity sleeptimer"
 msgstr "Dodatno završno vrijeme za ignoriranje neaktivnog tajmera"
@@ -5217,9 +5215,8 @@ msgstr "Multi-EPG odabir paketa"
 msgid "MultiType"
 msgstr "Više vrsta"
 
-#, fuzzy
 msgid "Multiboot image selector"
-msgstr "Više satelita (odaberite sve)"
+msgstr "Odabir između više image-a"
 
 msgid "Multichannel PCM"
 msgstr "Višekanalni PCM"
@@ -7522,7 +7519,7 @@ msgid "Select video mode"
 msgstr "Odaberite video način rada"
 
 msgid "Select whether your SCR device is externally powered."
-msgstr ""
+msgstr "Odaberite želite li da se vaš SCR uređaj napaja izvana."
 
 msgid "Select wireless network"
 msgstr "Odaberite bežičnu mrežu"
