--- a/po/hu.po
+++ b/po/hu.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-02-18 00:36+0200\n"
-"PO-Revision-Date: 2019-12-02 21:50+0100\n"
+"PO-Revision-Date: 2020-02-19 11:12+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
 "Language: hu_HU\n"
@@ -462,7 +462,7 @@ msgid "16:9 always"
 msgstr "mindig 16:9"
 
 msgid "16K"
-msgstr ""
+msgstr "16K"
 
 msgid "18 V"
 msgstr "18 V"
@@ -524,9 +524,8 @@ msgstr "4:3 Letterbox"
 msgid "4:3 PanScan"
 msgstr "4:3 PanScan"
 
-#, fuzzy
 msgid "4K"
-msgstr "4"
+msgstr "4K"
 
 msgid "5"
 msgstr "5"
@@ -543,9 +542,8 @@ msgstr "7"
 msgid "8"
 msgstr "8"
 
-#, fuzzy
 msgid "8K"
-msgstr "8"
+msgstr "8K"
 
 msgid "8bit"
 msgstr "8bit"
@@ -556,23 +554,20 @@ msgstr "9"
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - alapértelmezett (kikapcsolva)"
 
-#, fuzzy
 msgid "< Current >"
-msgstr "Aktuális érték: "
+msgstr "< Jelenlegi >"
 
-#, fuzzy
 msgid "< Default + Picon >"
-msgstr "<Alapértelmezett Kinézet>"
+msgstr "< Alapértelmezett + Picon >"
 
-#, fuzzy
 msgid "< Default >"
-msgstr "<Alapértelmezett Kinézet>"
+msgstr "< Alapértelmezett >"
 
 msgid "< Emergency >"
-msgstr ""
+msgstr "< Vészhelyzet >"
 
 msgid "< Pending restart >"
-msgstr ""
+msgstr "< Felfüggesztett újraindítás >"
 
 msgid "<Current movielist location>"
 msgstr "<Filmlista aktuális tárhelye>"
@@ -1441,9 +1436,8 @@ msgstr "Bootolás Androidba"
 msgid "Boot to Recovery menu"
 msgstr "Bootolás a visszaállítási menübe"
 
-#, fuzzy
 msgid "Bootup time"
-msgstr "Rendez: Idő"
+msgstr "Betöltési idő"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosznia-Hercegovina"
@@ -1611,17 +1605,16 @@ msgid "Cancel"
 msgstr "Mégse"
 
 msgid "Cancel any changes to the currently active skin"
-msgstr ""
+msgstr "A jelenleg aktív kinézet változtatásainak elvetése"
 
 msgid "Cancel any changes to the currently active skin and exit all menus"
-msgstr ""
+msgstr "A jelenleg aktív kinézet változtatásainak elvetése és kilépés"
 
 msgid "Cancel any text changes and exit"
 msgstr "Szöveg változások elvetése és kilépés"
 
-#, fuzzy
 msgid "Cancel execution?"
-msgstr "Csatorna választás"
+msgstr "Megszakítja a végrehajtást?"
 
 msgid "Cancelled upon user request"
 msgstr "Felhasználó kérésére megszakítva"
@@ -1944,9 +1937,8 @@ msgstr "Extra késleltetés beállítása külső feliratfájl esetén, szinkron
 msgid "Configure an additional delay to improve subtitle synchronisation."
 msgstr "Extra késleltetés beállítása felirathoz, szinkronizáció hibák korrigálásához."
 
-#, fuzzy
 msgid "Configure default type for new timers."
-msgstr "Alhálózati maszk beállítása."
+msgstr "Az új időzítők alapértelmezett típusának megadása."
 
 msgid "Configure for how long the infobar will remain visible after activation."
 msgstr "Ennyi ideig maradjon látható az információs sáv mejelenítést követően."
@@ -2569,9 +2561,8 @@ msgstr "Felvételek tárhelye"
 msgid "Default settings"
 msgstr "Alapértelmezett beállítások"
 
-#, fuzzy
 msgid "Default timer type"
-msgstr "Időzítő törlése"
+msgstr "Alapértelmezett időzítő típusa"
 
 msgid "Define the location of the EPG Cache file."
 msgstr "Az EPG cache fájl helyének megadása."
@@ -2816,9 +2807,8 @@ msgstr "Az aktuális műsor EPG-információ megjelenítése"
 msgid "Display EPG list for current channel"
 msgstr "Az aktuális csatorna EPG-jének megjelenítése"
 
-#, fuzzy
 msgid "Display Skin"
-msgstr "Előlapi kijelző"
+msgstr "Kijelző kinézet"
 
 msgid "Display and userinterface"
 msgstr "Képernyő és felhasználói felület"
@@ -3062,7 +3052,7 @@ msgid "EPG settings"
 msgstr "EPG beállítások"
 
 msgid "EPG:"
-msgstr ""
+msgstr "EPG:"
 
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
@@ -3556,9 +3546,8 @@ msgstr "Külső feliratok párbeszéd-színe"
 msgid "External subtitle switch fonts"
 msgstr "Külső felirat betűtípus csere"
 
-#, fuzzy
 msgid "Externally powered"
-msgstr "Külső tároló %s"
+msgstr "Külső energiaforrás"
 
 msgid "Extra end time to ignore inactivity sleeptimer"
 msgstr "Inaktivitás figyelmen kívül hagyásának záró ideje (extra időkeret)"
@@ -3613,7 +3602,7 @@ msgid "FEC:"
 msgstr "FEC:"
 
 msgid "FHD"
-msgstr ""
+msgstr "FHD"
 
 msgid "FTA"
 msgstr "FTA"
@@ -3874,9 +3863,8 @@ msgstr "GStreamer verzió: "
 msgid "GUI Settings"
 msgstr "Kezelőfelület beállítása"
 
-#, fuzzy
 msgid "GUI Skin"
-msgstr "Kezelőfelület beállítása"
+msgstr "Kezelőfelület kinézet"
 
 msgid ""
 "GUI needs a restart to apply a new language\n"
@@ -4041,9 +4029,8 @@ msgstr "Guyana"
 msgid "H"
 msgstr "H"
 
-#, fuzzy
 msgid "HD"
-msgstr "D"
+msgstr "HD"
 
 msgid "HD list"
 msgstr "HD csatornák"
@@ -4052,7 +4039,7 @@ msgid "HD2400"
 msgstr "HD2400"
 
 msgid "HD60"
-msgstr ""
+msgstr "HD60"
 
 msgid "HDMI"
 msgstr "HDMI"
@@ -4947,6 +4934,8 @@ msgid ""
 "Manufacturer reset in progress\n"
 "Please wait until enigma2 restarts"
 msgstr ""
+"Gyári beállítások visszaállítása folyamatban\n"
+"Várjon, amíg az enigma2 újraindul"
 
 msgid "Margin after recording (minutes)"
 msgstr "Felvétel utáni ráhagyás (perc)"
@@ -5141,21 +5130,17 @@ msgstr "A virtuális billentyűzet kurzor mozgatása felfelé"
 msgid "Move to position X"
 msgstr "Mozgatás az X pozícióra"
 
-#, fuzzy
 msgid "Move to the next page"
-msgstr "váltás a következő nézőszögre"
+msgstr "Áthelyezés a következő oldalra"
 
-#, fuzzy
 msgid "Move to the next skin"
-msgstr "ugrás a következő tételhez"
+msgstr "Áthelyezés a következő kinézethez"
 
-#, fuzzy
 msgid "Move to the previous page"
-msgstr "visszatekerés az előző chapterhez"
+msgstr "Áthelyezés az előző oldalra"
 
-#, fuzzy
 msgid "Move to the previous skin"
-msgstr "ugrás az előző tételhez"
+msgstr "Áthelyezés az előző kinézethez"
 
 msgid "Move west"
 msgstr "Nyugat felé"
@@ -5211,9 +5196,8 @@ msgstr "Multi-EPG lista kiválasztás"
 msgid "MultiType"
 msgstr "Multi-típus"
 
-#, fuzzy
 msgid "Multiboot image selector"
-msgstr "Több műhold (mind kiválasztva)"
+msgstr "Multiboot image választó"
 
 msgid "Multichannel PCM"
 msgstr "Többcsatornás PCM"
@@ -5705,7 +5689,7 @@ msgid "Open the movie list"
 msgstr "Filmlista megnyitása"
 
 msgid "Opkg"
-msgstr ""
+msgstr "Opkg"
 
 msgid "Options disable timer"
 msgstr "Időzítő letiltási beállítások"
@@ -6320,9 +6304,9 @@ msgstr "Nyomja le a MENÜ gombot a távírányítón további opciókért."
 msgid "Press OK on your remote control to continue."
 msgstr "Nyomja le az OK gombot a távirányítón a folytatáshoz."
 
-#, fuzzy, python-format
+#, python-format
 msgid "Press OK to activate the selected%s skin."
-msgstr "Nyomja le az OK gombot az új kinézet aktiválásához."
+msgstr "Nyomja le az OK gombot az új %s kinézet aktiválásához."
 
 msgid "Press OK to activate the settings."
 msgstr "Az OK gombbal aktiválhatja a beállításokat."
@@ -6334,9 +6318,9 @@ msgstr "Az OK gombbal módosíthatja a beállításokat."
 msgid "Press OK to get further details for %s"
 msgstr "Nyomja le az OK gombot több részletért %s kapcsán"
 
-#, fuzzy, python-format
+#, python-format
 msgid "Press OK to keep the currently selected%s skin."
-msgstr "Nyomja le az OK gombot az új kinézet aktiválásához."
+msgstr "Nyomja le az OK gombot a jelenlegi %s kinézet megtartásához."
 
 msgid "Press OK to scan"
 msgstr "Az OK gombbal indíthatja a keresést"
@@ -6523,9 +6507,8 @@ msgstr "Töröljem a befejezett időzítéseket?"
 msgid "Really exit the subservices quickzap?"
 msgstr "Biztos ki szeretne lépni az alcsatorna gyorsUGRÁS módból?"
 
-#, fuzzy
 msgid "Really perform a manufacturer reset now?"
-msgstr "Gyári visszaállítás képernyő védelme"
+msgstr "Valóban végrehajtja a gyári visszaállítást?"
 
 msgid "Really reboot now?"
 msgstr "Biztos újraindítsam most?"
@@ -6850,9 +6833,8 @@ msgstr "Visszaállítás"
 msgid "Restore backups"
 msgstr "Mentések visszaállítása"
 
-#, fuzzy
 msgid "Restore defaults"
-msgstr "Alapértelmezett"
+msgstr "Alapértelmezett visszaállítás"
 
 msgid "Restore deleted user bouquets"
 msgstr "Törölt felhasználói listák visszaállítása"
@@ -7075,9 +7057,8 @@ msgstr "Mentés"
 msgid "Save / Enter text and exit"
 msgstr "Szöveg bevitele/mentése és kilépés"
 
-#, fuzzy
 msgid "Save and activate the currently selected skin"
-msgstr "Nyomja le az OK gombot az új kinézet aktiválásához."
+msgstr "A kiválasztott kinézet mentése és aktiválása"
 
 msgid "Save and exit"
 msgstr "Mentés és kilépés"
@@ -7516,7 +7497,7 @@ msgid "Select video mode"
 msgstr "Válassza ki a video módot"
 
 msgid "Select whether your SCR device is externally powered."
-msgstr ""
+msgstr "Válassza ki, hogy az SCR eszköze külső áramforrásról működik-e."
 
 msgid "Select wireless network"
 msgstr "Válasszon vezeték nélküli hálózatot"
@@ -8106,12 +8087,11 @@ msgstr "Földrajzi hosszúsági fok"
 msgid "Skin & Resolution: %s (%sx%s)\n"
 msgstr "Kinézet és felbontás: %s (%sx%s)\n"
 
-#, fuzzy
 msgid "Skin Selection Actions"
-msgstr "Művelet kiválasztása"
+msgstr "Kinézet választás műveletek"
 
 msgid "SkinSelector: Restart GUI"
-msgstr ""
+msgstr "Kinézet választó: Kezelőfelület újraindítása"
 
 msgid "Skins"
 msgstr "Kinézetek"
@@ -8719,7 +8699,7 @@ msgid "TRANSLATOR_INFO"
 msgstr ""
 "A fordítást készítette:\n"
 "mcfly82 & wysless\n"
-"Utolsó fordítás időpontja: 2019.12.01.\n"
+"Utolsó fordítás időpontja: 2020.02.19.\n"
 "Eredeti fordítás: MediaVox-Team, Robertut\n"
 "A magyar fordítás az OpenPLi projekthez készült.\n"
 "További információ: http://openpli.org"
@@ -8752,7 +8732,7 @@ msgid "Tags"
 msgstr "Metaadatok"
 
 msgid "Taiwan"
-msgstr ""
+msgstr "Tajvan"
 
 msgid "Tajikistan"
 msgstr "Tádzsikisztán"
@@ -9262,9 +9242,8 @@ msgstr "Időzítés kiválasztása..."
 msgid "Timer type"
 msgstr "Időzítés típusa"
 
-#, fuzzy
 msgid "Timer:"
-msgstr "Időzítő"
+msgstr "Időzítő:"
 
 msgid "Timeshift"
 msgstr "Időcsúsztatás"
@@ -9298,14 +9277,14 @@ msgstr "Tétel-szett mód"
 
 #, python-format
 msgid "To apply the selected '%s' skin the GUI needs to restart. Would you like to restart the GUI now?"
-msgstr ""
+msgstr "A kiválasztott '%s' kinézet alkalmazásához újra kell indítani a kezelőfelületet. Kívánja most újraindítani a kezelőfelületet?"
 
 msgid "To audio selection"
 msgstr "Hangcsatorna kiválasztása"
 
 #, python-format
 msgid "To save and apply the selected '%s' skin the GUI needs to restart. Would you like to save the selection and restart the GUI now?"
-msgstr ""
+msgstr "A kiválasztott '%s' kinézet mentéséhez és alkalmazásához újra kell indítani a kezelőfelületet. Kívánja most elmenteni a változásokat és újraindítani a kezelőfelületet?"
 
 msgid "To subtitle selection"
 msgstr "Felirat kiválasztása"
@@ -10687,16 +10666,14 @@ msgstr "Csatorna váltva az időzítésre %s Kép-a-Képben módban!"
 msgid "Zapped to timer service %s!"
 msgstr "Csatorna váltva az időzítésre %s!"
 
-#, fuzzy
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
-msgstr "Zgemma H.S/H.2S/H.2H/H5/H7"
+msgstr "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 
 msgid "Zgemma H7(new model)/H9(new model)/H9COMBO/H9TWIN/H10"
-msgstr ""
+msgstr "Zgemma H7(new model)/H9(new model)/H9COMBO/H9TWIN/H10"
 
-#, fuzzy
 msgid "Zgemma H9(old model)/I55Plus"
-msgstr "Zgemma H9/i55 Plus"
+msgstr "Zgemma H9(old model)/I55Plus"
 
 msgid "Zgemma Star S/2S/H1/H2"
 msgstr "Zgemma Star S/2S/H1/H2"
@@ -10981,9 +10958,8 @@ msgstr "hiba a keresés közben"
 msgid "et4000"
 msgstr "et4000"
 
-#, fuzzy
 msgid "et5000/et6000"
-msgstr "et5000/6000"
+msgstr "et5000/et6000"
 
 msgid "et8000/et10000"
 msgstr "et8000/et10000"
@@ -10991,9 +10967,8 @@ msgstr "et8000/et10000"
 msgid "et9000/et9100"
 msgstr "et9000/et9100"
 
-#, fuzzy
 msgid "et9200/et9500/et6500"
-msgstr "et9200/9500/6500"
+msgstr "et9200/et9500/et6500"
 
 msgid "execute cuts (requires MovieCut plugin)"
 msgstr "vágások végrehajtása (MovieCut bővítmény szükséges)"
