--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-18 00:36+0200\n"
+"POT-Creation-Date: 2020-02-28 22:31+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -2655,6 +2655,10 @@ msgstr "Nebylo nalezeno vhodné médium - odstraňte některé stažené obrázk
 msgid "Could not load medium! No disc inserted?"
 msgstr "Nelze načíst médium. Není vložen disk?"
 
+#, fuzzy
+msgid "Could not locate epg file on fallback tuner"
+msgstr "Importovat časovače ze záložního přijímače"
+
 #
 msgid "Could not open Picture in Picture"
 msgstr "Nelze otevřít obraz v obraze"
@@ -3528,10 +3532,6 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "CHYBA - prohledávání selhalo (%s)!"
 
-#, python-format
-msgid "ERROR downloading file %s"
-msgstr "Chyba při stahování souboru %s"
-
 #
 msgid "East"
 msgstr "Východní"
@@ -3860,10 +3860,6 @@ msgstr "Eritrea"
 msgid "Error"
 msgstr "Chyba"
 
-#, python-format
-msgid "Error %s"
-msgstr "Chyba %s"
-
 #
 msgid "Error code"
 msgstr "Kód chyby"
@@ -3897,12 +3893,6 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr "Chyba při zrušení streamu!"
 
-msgid "Error when writing epg.dat on server"
-msgstr "Chyba při zápisu epg.dat na serveru"
-
-msgid "Error while retreiving epg.dat from server"
-msgstr "Chyba při načítání epg.dat na serveru"
-
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
@@ -3910,9 +3900,6 @@ msgid ""
 msgstr ""
 "Chyba při získávání informací o záložních časovačích\n"
 "%s"
-
-msgid "Error while retreiving location of epg.dat on server"
-msgstr "Chyba při načítání umístění epg.dat na serveru"
 
 #
 #, python-format
@@ -6218,9 +6205,6 @@ msgstr "Žádný popis k dispozici."
 msgid "No displayable files on this medium found!"
 msgstr "Žádné zobrazitelné soubory na tomto médiu nebyly nalezeny!"
 
-msgid "No epg.dat file found server"
-msgstr "Nenalezen soubor epg.dat na serveru"
-
 #
 msgid "No event info found, recording indefinitely."
 msgstr "Žádná informace o programu. Nekonečné nahrávání."
@@ -6271,6 +6255,9 @@ msgstr "Žádný kanál"
 #
 msgid "No services/providers selected"
 msgstr "Žádný program/poskytovatel není vybrán"
+
+msgid "No settings files to download on fallback tuner"
+msgstr ""
 
 #
 msgid "No standby"
