--- a/po/cs.po
+++ b/po/cs.po
@@ -126,11 +126,11 @@ msgstr "%.0f kB"
 
 #, python-format
 msgid "%.1f° E"
-msgstr ""
+msgstr "%.1f° E"
 
 #, python-format
 msgid "%.1f° W"
-msgstr ""
+msgstr "%.1f° W"
 
 #, python-format
 msgid "%.2f GB"
@@ -374,7 +374,7 @@ msgstr "%s (%s)\n"
 
 #, python-format
 msgid "%s imported from fallback tuner"
-msgstr "%s importováno ze záložního přijímače"
+msgstr "%s importováno ze záložního tuneru"
 
 #. TRANSLATORS: The satellite with name '%s' is no longer used after a configuration change. The user is asked whether or not the satellite should be deleted.
 #, python-format
@@ -1654,9 +1654,8 @@ msgid "Boot to Recovery menu"
 msgstr "Boot do Recovery menu"
 
 #
-#, fuzzy
 msgid "Bootup time"
-msgstr "Setřídit dle času"
+msgstr "Čas spuštění"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosna a Hercegovina"
@@ -2655,9 +2654,8 @@ msgstr "Nebylo nalezeno vhodné médium - odstraňte některé stažené obrázk
 msgid "Could not load medium! No disc inserted?"
 msgstr "Nelze načíst médium. Není vložen disk?"
 
-#, fuzzy
 msgid "Could not locate epg file on fallback tuner"
-msgstr "Importovat časovače ze záložního přijímače"
+msgstr "V záložním tuneru nelze najít soubor epg"
 
 #
 msgid "Could not open Picture in Picture"
@@ -2775,7 +2773,7 @@ msgid "Customize"
 msgstr "Přizpůsobení"
 
 msgid "Customize OpenWebIF settings for fallback tuner"
-msgstr "Úprava nastavení OpenWebIf pro záložní přijímač"
+msgstr "Úprava nastavení OpenWebIf pro záložní tuner"
 
 #
 msgid "Customize channel list cursor behavior"
@@ -3081,7 +3079,7 @@ msgstr "Umístění vzdáleného záložního přijímače"
 
 # ##
 msgid "Destination of fallback remote receiver for ATSC"
-msgstr "Umístění záložního přijímače pro ATSC"
+msgstr "Umístění záložního tuneru pro ATSC"
 
 # ##
 msgid "Destination of fallback remote receiver for DVB-C"
@@ -3497,7 +3495,7 @@ msgstr "Dynamický kontrast"
 
 #
 msgid "E"
-msgstr "Východní"
+msgstr "E"
 
 #
 msgid "ECM Info"
@@ -3685,7 +3683,7 @@ msgid "Enable freesat EPG"
 msgstr "Povolit freesat EPG"
 
 msgid "Enable import timer from fallback tuner"
-msgstr "Importovat časovače ze záložního přijímače"
+msgstr "Importovat časovače ze záložního tuneru"
 
 #
 msgid "Enable move mode"
@@ -3898,7 +3896,7 @@ msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
 msgstr ""
-"Chyba při získávání informací o záložních časovačích\n"
+"Chyba při získávání informací ze záložního časovače\n"
 "%s"
 
 #
@@ -4081,9 +4079,8 @@ msgstr "Obarvení dialogů pro externí titulky"
 msgid "External subtitle switch fonts"
 msgstr "Přepínání fontu pro externí titulky"
 
-#, fuzzy
 msgid "Externally powered"
-msgstr "Externí uložiště %s"
+msgstr "Externě napájeno"
 
 msgid "Extra end time to ignore inactivity sleeptimer"
 msgstr "Konec dalšího úseku ignorování časovače vypnutí"
@@ -4948,7 +4945,7 @@ msgstr "Ze záložního přijímače se importují programy a/nebo EPG také v p
 
 #, python-format
 msgid "Import from fallback tuner failed, %s"
-msgstr "Import ze záložního přijímače selhal, %s"
+msgstr "Import ze záložního tuneru selhal, %s"
 
 msgid "Import from remote receiver URL"
 msgstr "Importovat ze záložního přijímače"
@@ -5646,7 +5643,7 @@ msgid "Manual transponder"
 msgstr "ručně definovaný transpondér"
 
 msgid "Manually import from fallback tuner"
-msgstr "Import ze záložního přijímače"
+msgstr "Import ze záložního tuneru"
 
 #
 msgid "Manufacturer"
@@ -6257,7 +6254,7 @@ msgid "No services/providers selected"
 msgstr "Žádný program/poskytovatel není vybrán"
 
 msgid "No settings files to download on fallback tuner"
-msgstr ""
+msgstr "V záložním tuneru nejsou žádné soubory nastavení"
 
 #
 msgid "No standby"
@@ -8668,7 +8665,7 @@ msgid "Select video mode"
 msgstr "Zvolte video mód"
 
 msgid "Select whether your SCR device is externally powered."
-msgstr ""
+msgstr "Vyberte, zda je Vaše SCR zařízení externě napájeno."
 
 #
 msgid "Select wireless network"
@@ -8845,7 +8842,7 @@ msgid "Set all hotkey to default?"
 msgstr "Výchozí nastavení hotkey?"
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
-msgstr "Nastavení záložního přijímače pro DVB-T/C nebo ATSC"
+msgstr "Nastavení záložních tunerů pro DVB-T/C nebo ATSC"
 
 msgid "Set as startup service"
 msgstr "Nastavit jako program po spuštění"
@@ -8892,13 +8889,13 @@ msgid "Set startup service"
 msgstr "Nastavit kanál po spuštění"
 
 msgid "Set the User ID of the OpenWebif from your fallback tuner"
-msgstr "Nastavte uživatelské jméno pro OpenWebIf z Vašeho záložního přijímače."
+msgstr "Nastavte uživatelské jméno pro OpenWebIf z Vašeho záložního tuneru."
 
 msgid "Set the password of the OpenWebif from your fallback tuner"
-msgstr "Nastavte heslo pro OpenWebIf z Vašeho záložního přijímače."
+msgstr "Nastavte heslo pro OpenWebIf z Vašeho záložního tuneru."
 
 msgid "Set the port of the OpenWebif from your fallback tuner"
-msgstr "Nastavte port pro OpenWebIf z Vašeho záložního přijímače."
+msgstr "Nastavte port pro OpenWebIf z Vašeho záložního tuneru."
 
 #
 msgid "Set the type of the progress indication in the channel selection screen."
@@ -10047,7 +10044,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®17.2.2020"
+"®29.2.2020"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -10992,7 +10989,7 @@ msgid "Unencrypted"
 msgstr "Nezabezpečeno"
 
 msgid "Unexpected error while retreiving fallback tuner's timer information"
-msgstr "Neočekávaná chyba při načítání informací o časovači záložního přijímače."
+msgstr "Neočekávaná chyba při načítání informací o časovači záložního tuneru."
 
 #
 msgid "UnhandledKey"
@@ -11476,7 +11473,7 @@ msgstr "Zasílit zvuk"
 
 #
 msgid "W"
-msgstr "Západní"
+msgstr "W"
 
 #
 msgid "WEP"
@@ -11646,7 +11643,7 @@ msgid "When enabled the set top box is able to wakeup on LAN"
 msgstr "Jestliže je zapnuto, pak je možné přijímač probouzet v síti LAN pomocí Magic packetu."
 
 msgid "When enabled the timer from the fallback tuner is imported"
-msgstr "Jestliže je povoleno, pak jsou do přehledu časovačů importovány časovače ze záložního přijímače"
+msgstr "Do přehledu časovačů jsou importovány časovače ze záložního tuneru"
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
 msgstr "Pokud je povoleno a vyberete nový kanál ve výběru kanálů, pak výběr kanálů nebude uzavřen a zavře se pouze tehdy, jestliže vyberete aktuální přehrávaný program. Jde o druh režimu náhledu."
@@ -11655,7 +11652,7 @@ msgid "When enabled you can control the volume with the arrow buttons instead of
 msgstr "Pokud je povoleno, pak můžete ovládat pomocí tlačítek se šipkami hlasitost namísto přístupu do seznamu kanálů"
 
 msgid "When enabled you can customize the OpenWebIf settings for the fallback tuner"
-msgstr "Jestliže je povoleno, můžete přizpůsobit nastavení OpenWebIf pro záložní přijímač"
+msgstr "Můžete přizpůsobit nastavení OpenWebIf pro záložní tuner"
 
 #
 msgid "When enabled you can specify a timeframe to ignore the shutdown timer when the receiver is in standby mode"
